🐛Fix wrapping for FoodContainer

--- a/src/components/FoodContainer/FoodContainer.module.css
+++ b/src/components/FoodContainer/FoodContainer.module.css
@@ -1,5 +1,6 @@
 .div {
   display: flex;
+  flex-wrap: wrap;
   padding: 5px;
   border: solid 3px rgb(2, 153, 108);
   border-radius: 3px;
